fix :  error 제거