@@ -1,7 +1,8 @@
 package com.gdg.todolist.jwt;
 
+import com.gdg.todolist.domain.LocalUser;
 import com.gdg.todolist.domain.User;
-import com.gdg.todolist.exception.BadReqeustException;
+import com.gdg.todolist.dto.TokenDto;
 import io.jsonwebtoken.Claims;
 import io.jsonwebtoken.ExpiredJwtException;
 import io.jsonwebtoken.Jwts;
@@ -15,63 +16,103 @@ import jakarta.servlet.http.HttpServletRequest;
 import org.springframework.beans.factory.annotation.Value;
 import org.springframework.security.authentication.UsernamePasswordAuthenticationToken;
 import org.springframework.security.core.Authentication;
+import org.springframework.security.core.GrantedAuthority;
 import org.springframework.security.core.authority.SimpleGrantedAuthority;
 import org.springframework.stereotype.Component;
 import org.springframework.util.StringUtils;
 
 import java.security.Key;
 import java.util.Arrays;
+import java.util.Collection;
 import java.util.Date;
-import java.util.List;
+import java.util.stream.Collectors;
 
 @Component
 public class TokenProvider {
 
-    private static final String ROLE_CLAIM = "Role";
-    private static final String BEARER = "Bearer ";
-    private static final String AUTHORIZATION = "Authorization";
-
     private final Key key;
-    private final Long accessTokenValidityTime;
-    private final Long refreshTokenValidityTime;
+    private final long accessTokenValidityTime;
+    private final long refreshTokenValidityTime;
 
     public TokenProvider(@Value("${jwt.secret}") String secretKey,
-                         @Value("${jwt.access-token-validity-in-milliseconds}") Long accessTokenValidityTime,
-                         @Value("${jwt.refresh-token-validity-in-milliseconds}")  Long refreshTokenValidityTime) {
+                         @Value("${jwt.access-token-validity-in-milliseconds}") long accessTokenValidityTime,
+                         @Value("${jwt.refresh-token-validity-in-milliseconds") long refreshTokenValidityInMilliSeconds) {
         byte[] keyBytes = Decoders.BASE64.decode(secretKey);
         this.key = Keys.hmacShaKeyFor(keyBytes);
         this.accessTokenValidityTime = accessTokenValidityTime;
-        this.refreshTokenValidityTime = refreshTokenValidityTime;
+        this.refreshTokenValidityTime = refreshTokenValidityInMilliSeconds;
     }
 
-    public String createAccessToken(User user) {
-        return buildToken(user, accessTokenValidityTime);
+    public TokenDto createToken(User user) {
+        long nowTime = (new Date()).getTime();
+
+        Date tokenExpiredTime = new Date(nowTime + accessTokenValidityTime);
+        Date refreshTokenExpiredTime = new Date(nowTime + refreshTokenValidityTime);
+
+        String accessToken = Jwts.builder()
+                .setSubject(user.getId().toString())
+                .claim("auth", user.getRole().name())
+                .setExpiration(tokenExpiredTime)
+                .signWith(key, SignatureAlgorithm.HS256)
+                .compact();
+
+        String refreshToken = Jwts.builder()
+                .setSubject(user.getId().toString())
+                .claim("auth", user.getRole().name())
+                .setExpiration(refreshTokenExpiredTime)
+                .signWith(key, SignatureAlgorithm.HS256)
+                .compact();
+
+        return TokenDto.builder()
+                .accessToken(accessToken)
+                .refreshToken(refreshToken)
+                .build();
     }
 
-    public String createRefreshToken(User user) {
-        return buildToken(user, refreshTokenValidityTime);
+    public TokenDto localToken(LocalUser localUser) {
+        long nowTime = (new Date()).getTime();
+
+        Date tokenExpiredTime = new Date(nowTime + accessTokenValidityTime);
+        Date refreshTokenExpiredTime = new Date(nowTime + refreshTokenValidityTime);
+
+        String accessToken = Jwts.builder()
+                .setSubject(localUser.getId().toString())
+                .claim("auth", localUser.getRole().name())
+                .setExpiration(tokenExpiredTime)
+                .signWith(key, SignatureAlgorithm.HS256)
+                .compact();
+
+        String refreshToken = Jwts.builder()
+                .setSubject(localUser.getId().toString())
+                .claim("auth", localUser.getRole().name())
+                .setExpiration(refreshTokenExpiredTime)
+                .signWith(key, SignatureAlgorithm.HS256)
+                .compact();
+
+        return TokenDto.builder()
+                .accessToken(accessToken)
+                .refreshToken(refreshToken)
+                .build();
     }
 
-    public Authentication getAuthentication(String token) {
-        Claims claims = parseClaims(token);
+    public Authentication getAuthentication(String accessToken) {
+        Claims claims = parseClaims(accessToken);
 
-        if(claims.get(ROLE_CLAIM) == null) {
-            throw new BadReqeustException("권한 정보가 없는 토큰입니다.");
+        if (claims.get("auth") == null) {
+            throw new RuntimeException("권한 정보가 없는 토큰입니다.");
         }
 
-        List<SimpleGrantedAuthority> authorities =
-                Arrays.stream(claims.get(ROLE_CLAIM).toString().split(","))
-                        .map(SimpleGrantedAuthority::new)
-                        .toList();
-        UsernamePasswordAuthenticationToken authentication = new UsernamePasswordAuthenticationToken(claims.getSubject(), null, authorities);
-        authentication.setDetails(claims);
-        return authentication;
+        Collection<? extends GrantedAuthority> authorities = Arrays.stream(claims.get("auth").toString().split(","))
+                .map(SimpleGrantedAuthority::new)
+                .collect(Collectors.toList());
+
+        return new UsernamePasswordAuthenticationToken(claims.getSubject(), "", authorities);
     }
 
     public String revokeToken(HttpServletRequest request) {
-        String bearerToken = request.getHeader(AUTHORIZATION);
+        String bearerToken = request.getHeader("Authorization");
 
-        if(StringUtils.hasText(bearerToken) && bearerToken.startsWith(BEARER)) {
+        if (StringUtils.hasText(bearerToken) && bearerToken.startsWith("Bearer ")) {
             return bearerToken.substring(7);
         }
 
@@ -80,10 +121,7 @@ public class TokenProvider {
 
     public boolean validateToken(String token) {
         try {
-            Jwts.parserBuilder()
-                    .setSigningKey(key)
-                    .build()
-                    .parseClaimsJws(token);
+            Jwts.parserBuilder().setSigningKey(key).build().parseClaimsJws(token);
             return true;
         } catch (SecurityException | SignatureException | MalformedJwtException e) {
             return false;
@@ -92,29 +130,11 @@ public class TokenProvider {
         }
     }
 
-    private String buildToken(User user, long validityTime) {
-        long now = new Date().getTime();
-        Date expiry = new Date(now + validityTime);
-
-        return Jwts.builder()
-                .setSubject(user.getId().toString())
-                .claim(ROLE_CLAIM, user.getRole().name())
-                .setExpiration(expiry)
-                .signWith(key, SignatureAlgorithm.HS256)
-                .compact();
-    }
-
     private Claims parseClaims(String accessToken) {
         try {
-            return Jwts.parserBuilder()
-                    .setSigningKey(key)
-                    .build()
-                    .parseClaimsJws(accessToken)
-                    .getBody();
+            return Jwts.parserBuilder().setSigningKey(key).build().parseClaimsJws(accessToken).getBody();
         } catch (ExpiredJwtException e) {
             return e.getClaims();
-        } catch (SignatureException e) {
-            throw new BadReqeustException("토큰 복호화에 실패했습니다.");
         }
     }
 }
